--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "lodash": "^4.17.20",
     "multer": "^1.4.2",
     "pg": "^8.0.0",
     "reflect-metadata": "^0.1.13",
@@ -28,6 +29,7 @@
     "@types/express": "4.17.3",
     "@types/express-serve-static-core": "4.17.2",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.161",
     "@types/multer": "^1.4.2",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^8.3.0",
